# sigbox-lever-video

./: .gitignore  .pre-commit-config.yaml  Lever Video Sim.lnk  README.md  build-uv.bat  build.bat  dtrelay.json  pyproject.toml  sigbox-lever-video.spec  sys-piplist.txt  test-api.bat  venv-piplist.txt  version.txt
source/: main.py
